---
source: hir/src/passes/resolver.rs
expression: "&hir"
---
Hir {
    identifiers: [
        IdentId(0) => "f",
        IdentId(1) => "n",
        IdentId(2) => "number",
        IdentId(3) => "le",
        IdentId(4) => "sub",
        IdentId(5) => "add",
        IdentId(6) => "boolean",
        IdentId(7) => "div",
        IdentId(8) => "eq",
        IdentId(9) => "ge",
        IdentId(10) => "gt",
        IdentId(11) => "lt",
        IdentId(12) => "mul",
        IdentId(13) => "neg",
        IdentId(14) => "neq",
        IdentId(15) => "print",
        IdentId(16) => "void",
    ],
    identifier_refs: [
        IdentRefId(0) => IdentifierRef {
            id: IdentRefId(0),
            ident: Identifier {
                id: IdentId(2),
                span: 2:10; [22, 28],
                bound: Bound(2),
            },
        },
        IdentRefId(1) => IdentifierRef {
            id: IdentRefId(1),
            ident: Identifier {
                id: IdentId(2),
                span: 2:19; [31, 37],
                bound: Bound(2),
            },
        },
        IdentRefId(2) => IdentifierRef {
            id: IdentRefId(2),
            ident: Identifier {
                id: IdentId(1),
                span: 3:8; [47, 48],
                bound: Bound(20),
            },
        },
        IdentRefId(3) => IdentifierRef {
            id: IdentRefId(3),
            ident: Identifier {
                id: IdentId(1),
                span: 4:13; [68, 69],
                bound: Bound(20),
            },
        },
        IdentRefId(4) => IdentifierRef {
            id: IdentRefId(4),
            ident: Identifier {
                id: IdentId(1),
                span: 7:7; [84, 85],
                bound: Bound(20),
            },
        },
        IdentRefId(5) => IdentifierRef {
            id: IdentRefId(5),
            ident: Identifier {
                id: IdentId(0),
                span: 7:5; [82, 83],
                bound: Bound(19),
            },
        },
        IdentRefId(6) => IdentifierRef {
            id: IdentRefId(6),
            ident: Identifier {
                id: IdentId(1),
                span: 7:18; [95, 96],
                bound: Bound(20),
            },
        },
        IdentRefId(7) => IdentifierRef {
            id: IdentRefId(7),
            ident: Identifier {
                id: IdentId(0),
                span: 7:16; [93, 94],
                bound: Bound(19),
            },
        },
        IdentRefId(8) => IdentifierRef {
            id: IdentRefId(8),
            ident: Identifier {
                id: IdentId(0),
                span: 10:1; [106, 107],
                bound: Bound(19),
            },
        },
        IdentRefId(9) => IdentifierRef {
            id: IdentRefId(9),
            ident: Identifier {
                id: IdentId(3),
                span: 3:10; [49, 51],
                bound: Bound(12),
            },
        },
        IdentRefId(10) => IdentifierRef {
            id: IdentRefId(10),
            ident: Identifier {
                id: IdentId(4),
                span: 7:9; [86, 87],
                bound: Bound(4),
            },
        },
        IdentRefId(11) => IdentifierRef {
            id: IdentRefId(11),
            ident: Identifier {
                id: IdentId(4),
                span: 7:20; [97, 98],
                bound: Bound(4),
            },
        },
        IdentRefId(12) => IdentifierRef {
            id: IdentRefId(12),
            ident: Identifier {
                id: IdentId(5),
                span: 7:14; [91, 92],
                bound: Bound(18),
            },
        },
        IdentRefId(13) => IdentifierRef {
            id: IdentRefId(13),
            ident: Identifier {
                id: IdentId(5),
                span: 10:6; [111, 112],
                bound: Bound(18),
            },
        },
    ],
    expressions: [
        ExprId(0) => Expression {
            id: ExprId(0),
            kind: Literal(
                Literal {
                    kind: IdentRefId(2),
                    span: 3:8; [47, 48],
                },
            ),
            span: 3:8; [47, 48],
            typed: Typed(4),
        },
        ExprId(1) => Expression {
            id: ExprId(1),
            kind: Literal(
                Literal {
                    kind: Number(1),
                    span: 3:13; [52, 53],
                },
            ),
            span: 3:13; [52, 53],
            typed: Typed(4),
        },
        ExprId(2) => Expression {
            id: ExprId(2),
            kind: FunctionCall(
                IdentRefId(9),
                [
                    ExprId(0),
                    ExprId(1),
                ],
            ),
            span: 3:8; [47, 53],
            typed: Typed(3),
        },
        ExprId(3) => Expression {
            id: ExprId(3),
            kind: Literal(
                Literal {
                    kind: IdentRefId(3),
                    span: 4:13; [68, 69],
                },
            ),
            span: 4:13; [68, 69],
            typed: Typed(4),
        },
        ExprId(4) => Expression {
            id: ExprId(4),
            kind: Block(
                [
                    StmtId(0),
                ],
            ),
            span: 3:15; [54, 76],
            typed: Typed(2),
        },
        ExprId(5) => Expression {
            id: ExprId(5),
            kind: If(
                ExprId(2),
                ExprId(4),
                None,
            ),
            span: 3:5; [44, 76],
            typed: Typed(1),
        },
        ExprId(6) => Expression {
            id: ExprId(6),
            kind: Literal(
                Literal {
                    kind: IdentRefId(4),
                    span: 7:7; [84, 85],
                },
            ),
            span: 7:7; [84, 85],
            typed: Typed(4),
        },
        ExprId(7) => Expression {
            id: ExprId(7),
            kind: Literal(
                Literal {
                    kind: Number(1),
                    span: 7:11; [88, 89],
                },
            ),
            span: 7:11; [88, 89],
            typed: Typed(4),
        },
        ExprId(8) => Expression {
            id: ExprId(8),
            kind: FunctionCall(
                IdentRefId(10),
                [
                    ExprId(6),
                    ExprId(7),
                ],
            ),
            span: 7:7; [84, 89],
            typed: Typed(4),
        },
        ExprId(9) => Expression {
            id: ExprId(9),
            kind: FunctionCall(
                IdentRefId(5),
                [
                    ExprId(8),
                ],
            ),
            span: 7:5; [82, 90],
            typed: Typed(4),
        },
        ExprId(10) => Expression {
            id: ExprId(10),
            kind: Literal(
                Literal {
                    kind: IdentRefId(6),
                    span: 7:18; [95, 96],
                },
            ),
            span: 7:18; [95, 96],
            typed: Typed(4),
        },
        ExprId(11) => Expression {
            id: ExprId(11),
            kind: Literal(
                Literal {
                    kind: Number(2),
                    span: 7:22; [99, 100],
                },
            ),
            span: 7:22; [99, 100],
            typed: Typed(4),
        },
        ExprId(12) => Expression {
            id: ExprId(12),
            kind: FunctionCall(
                IdentRefId(11),
                [
                    ExprId(10),
                    ExprId(11),
                ],
            ),
            span: 7:18; [95, 100],
            typed: Typed(4),
        },
        ExprId(13) => Expression {
            id: ExprId(13),
            kind: FunctionCall(
                IdentRefId(7),
                [
                    ExprId(12),
                ],
            ),
            span: 7:16; [93, 101],
            typed: Typed(4),
        },
        ExprId(14) => Expression {
            id: ExprId(14),
            kind: FunctionCall(
                IdentRefId(12),
                [
                    ExprId(9),
                    ExprId(13),
                ],
            ),
            span: 7:5; [82, 101],
            typed: Typed(4),
        },
        ExprId(15) => Expression {
            id: ExprId(15),
            kind: Block(
                [
                    StmtId(1),
                    StmtId(2),
                ],
            ),
            span: 2:26; [38, 104],
            typed: Typed(2),
        },
        ExprId(16) => Expression {
            id: ExprId(16),
            kind: Literal(
                Literal {
                    kind: Number(9),
                    span: 10:3; [108, 109],
                },
            ),
            span: 10:3; [108, 109],
            typed: Typed(4),
        },
        ExprId(17) => Expression {
            id: ExprId(17),
            kind: FunctionCall(
                IdentRefId(8),
                [
                    ExprId(16),
                ],
            ),
            span: 10:1; [106, 110],
            typed: Typed(4),
        },
        ExprId(18) => Expression {
            id: ExprId(18),
            kind: Literal(
                Literal {
                    kind: Number(8),
                    span: 10:8; [113, 114],
                },
            ),
            span: 10:8; [113, 114],
            typed: Typed(4),
        },
        ExprId(19) => Expression {
            id: ExprId(19),
            kind: FunctionCall(
                IdentRefId(13),
                [
                    ExprId(17),
                    ExprId(18),
                ],
            ),
            span: 10:1; [106, 114],
            typed: Typed(4),
        },
    ],
    statements: [
        StmtId(0) => Statement {
            id: StmtId(0),
            kind: Ret(
                Some(
                    ExprId(3),
                ),
                Explicit,
            ),
            span: 4:9; [64, 70],
        },
        StmtId(1) => Statement {
            id: StmtId(1),
            kind: Expression(
                ExprId(5),
            ),
            span: 3:5; [44, 76],
        },
        StmtId(2) => Statement {
            id: StmtId(2),
            kind: Ret(
                Some(
                    ExprId(14),
                ),
                Implicit,
            ),
            span: 7:5; [82, 102],
        },
        StmtId(3) => Statement {
            id: StmtId(3),
            kind: LetFn(
                Identifier {
                    id: IdentId(0),
                    span: 2:5; [17, 18],
                    bound: Bound(19),
                },
                [
                    Parameter {
                        identifier: Identifier {
                            id: IdentId(1),
                            span: 2:7; [19, 20],
                            bound: Bound(20),
                        },
                        ty: IdentRefId(0),
                        span: 2:7; [19, 28],
                        typed: Typed(4),
                    },
                ],
                Return {
                    ret: Some(
                        IdentRefId(1),
                    ),
                    typed: Typed(4),
                },
                ExprId(15),
            ),
            span: 2:1; [13, 104],
        },
        StmtId(4) => Statement {
            id: StmtId(4),
            kind: Expression(
                ExprId(19),
            ),
            span: 10:1; [106, 115],
        },
    ],
    roots: [
        StmtId(3),
        StmtId(4),
    ],
    symbols: [
        SymbolId(0) => Symbol {
            id: SymbolId(0),
            kind: NotFound,
            type_id: TypeId(0),
        },
        SymbolId(1) => Symbol {
            id: SymbolId(1),
            kind: NativeType(
                IdentId(16),
                Void,
            ),
            type_id: TypeId(2),
        },
        SymbolId(2) => Symbol {
            id: SymbolId(2),
            kind: NativeType(
                IdentId(2),
                Number,
            ),
            type_id: TypeId(2),
        },
        SymbolId(3) => Symbol {
            id: SymbolId(3),
            kind: NativeType(
                IdentId(6),
                Boolean,
            ),
            type_id: TypeId(2),
        },
        SymbolId(4) => Symbol {
            id: SymbolId(4),
            kind: Native(
                IdentId(4),
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(4),
                SubNumberNumber,
            ),
            type_id: TypeId(5),
        },
        SymbolId(5) => Symbol {
            id: SymbolId(5),
            kind: Native(
                IdentId(15),
                [
                    TypeId(4),
                ],
                TypeId(1),
                PrintNumber,
            ),
            type_id: TypeId(6),
        },
        SymbolId(6) => Symbol {
            id: SymbolId(6),
            kind: Native(
                IdentId(15),
                [
                    TypeId(3),
                ],
                TypeId(1),
                PrintBoolean,
            ),
            type_id: TypeId(7),
        },
        SymbolId(7) => Symbol {
            id: SymbolId(7),
            kind: Native(
                IdentId(14),
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(3),
                NeqNumberNumber,
            ),
            type_id: TypeId(8),
        },
        SymbolId(8) => Symbol {
            id: SymbolId(8),
            kind: Native(
                IdentId(14),
                [
                    TypeId(3),
                    TypeId(3),
                ],
                TypeId(3),
                NeqBooleanBoolean,
            ),
            type_id: TypeId(9),
        },
        SymbolId(9) => Symbol {
            id: SymbolId(9),
            kind: Native(
                IdentId(13),
                [
                    TypeId(4),
                ],
                TypeId(4),
                NegNumber,
            ),
            type_id: TypeId(10),
        },
        SymbolId(10) => Symbol {
            id: SymbolId(10),
            kind: Native(
                IdentId(12),
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(4),
                MulNumberNumber,
            ),
            type_id: TypeId(5),
        },
        SymbolId(11) => Symbol {
            id: SymbolId(11),
            kind: Native(
                IdentId(11),
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(3),
                LtNumberNumber,
            ),
            type_id: TypeId(8),
        },
        SymbolId(12) => Symbol {
            id: SymbolId(12),
            kind: Native(
                IdentId(3),
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(3),
                LeNumberNumber,
            ),
            type_id: TypeId(8),
        },
        SymbolId(13) => Symbol {
            id: SymbolId(13),
            kind: Native(
                IdentId(10),
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(3),
                GtNumberNumber,
            ),
            type_id: TypeId(8),
        },
        SymbolId(14) => Symbol {
            id: SymbolId(14),
            kind: Native(
                IdentId(9),
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(3),
                GeNumberNumber,
            ),
            type_id: TypeId(8),
        },
        SymbolId(15) => Symbol {
            id: SymbolId(15),
            kind: Native(
                IdentId(8),
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(3),
                EqNumberNumber,
            ),
            type_id: TypeId(8),
        },
        SymbolId(16) => Symbol {
            id: SymbolId(16),
            kind: Native(
                IdentId(8),
                [
                    TypeId(3),
                    TypeId(3),
                ],
                TypeId(3),
                EqBooleanBoolean,
            ),
            type_id: TypeId(9),
        },
        SymbolId(17) => Symbol {
            id: SymbolId(17),
            kind: Native(
                IdentId(7),
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(4),
                DivNumberNumber,
            ),
            type_id: TypeId(5),
        },
        SymbolId(18) => Symbol {
            id: SymbolId(18),
            kind: Native(
                IdentId(5),
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(4),
                AddNumberNumber,
            ),
            type_id: TypeId(5),
        },
        SymbolId(19) => Symbol {
            id: SymbolId(19),
            kind: LetFn(
                IdentId(0),
                StmtId(3),
                [
                    TypeId(4),
                ],
                TypeId(4),
            ),
            type_id: TypeId(10),
        },
        SymbolId(20) => Symbol {
            id: SymbolId(20),
            kind: Parameter(
                IdentId(1),
                StmtId(3),
                0,
            ),
            type_id: TypeId(4),
        },
    ],
    types: [
        TypeId(0) => Invalid,
        TypeId(1) => Void,
        TypeId(2) => None,
        TypeId(3) => Boolean,
        TypeId(4) => Number,
        TypeId(5) => Function(
            [
                TypeId(4),
                TypeId(4),
            ],
            TypeId(4),
        ),
        TypeId(6) => Function(
            [
                TypeId(4),
            ],
            TypeId(1),
        ),
        TypeId(7) => Function(
            [
                TypeId(3),
            ],
            TypeId(1),
        ),
        TypeId(8) => Function(
            [
                TypeId(4),
                TypeId(4),
            ],
            TypeId(3),
        ),
        TypeId(9) => Function(
            [
                TypeId(3),
                TypeId(3),
            ],
            TypeId(3),
        ),
        TypeId(10) => Function(
            [
                TypeId(4),
            ],
            TypeId(4),
        ),
    ],
    exit_points: ExitPoints {
        exit_points: {
            ExprId(15): [
                Explicit(
                    Some(
                        ExprId(3),
                    ),
                ),
                Implicit(
                    Some(
                        ExprId(14),
                    ),
                ),
            ],
        },
        unreachable: [],
    },
}
